--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_slate">SlateActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_demo">DemoActivity</string>
 </resources>
